--- a/RandomCircles/res/layout/activity_circle_generator.xml
+++ b/RandomCircles/res/layout/activity_circle_generator.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -9,21 +9,25 @@
     tools:context=".CircleGenerator." >
     
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/button_pushme"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:onClick="pushmebutton"
         android:text="@string/push_me"
         android:textSize="29sp"
-        android:typeface="serif" 
-    />
+        android:typeface="serif" />
 
     <com.randomcircles.DrawCircle
-        android:layout_width="fill_parent"
+        android:id="@+id/circle_canvas"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button_pushme"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" 
-    />
+        android:layout_alignRight="@+id/button_pushme"
+        android:layout_below="@+id/button_pushme"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="24dp" />
 
 </RelativeLayout>
