--- a/GuessTheCapital/res/layout/activity_start.xml
+++ b/GuessTheCapital/res/layout/activity_start.xml
@@ -1,3 +1,8 @@
+<!--  Name: Julian Eljabali-->
+<!--  Assignment#5 -->
+<!--  July 17th 2013 -->
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
