--- a/Cars/app/src/main/res/layout/car_adapter_item.xml
+++ b/Cars/app/src/main/res/layout/car_adapter_item.xml
@@ -2,8 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
         android:id="@+id/car_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+    />
+
 </LinearLayout>
