--- a/Cars/app/src/main/res/layout/list_and_buttons_fragment.xml
+++ b/Cars/app/src/main/res/layout/list_and_buttons_fragment.xml
@@ -9,8 +9,8 @@
         android:id="@+id/CarListView"
         android:layout_width="192dp"
         android:layout_height="match_parent"
-        android:background="#fff37338">
-
+        android:background="#fff37338"
+    >
     </ListView>
 
     <Button
@@ -21,7 +21,8 @@
         android:text="PRICE"
         android:background="#fffdb632"
         android:padding="10dp"
-        android:clickable="true" />
+        android:clickable="true"
+    />
 
     <Button
         android:id="@+id/HorsePower"
@@ -31,6 +32,7 @@
         android:text="HORSE POWER"
         android:background="#ff027878"
         android:padding="10dp"
-        android:clickable="true" />
+        android:clickable="true"
+    />
 
 </LinearLayout>
