--- a/Cars/app/src/main/res/layout/price_fragment.xml
+++ b/Cars/app/src/main/res/layout/price_fragment.xml
@@ -2,13 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fffffc74">
+
     <TextView
         android:id="@+id/car_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+    />
+
     <TextView
         android:id="@+id/car_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+    />
+
 </LinearLayout>
