--- a/Horoscopes/app/src/main/res/layout/horoscope_description.xml
+++ b/Horoscopes/app/src/main/res/layout/horoscope_description.xml
@@ -13,24 +13,31 @@
         android:drawSelectorOnTop="false"
         android:textColor="#7411F7"
         android:textSize="45dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:paddingRight="0dp"
+        android:paddingLeft="0dp"
+        android:layout_weight="0.15" />
 
     <TextView
         android:id="@+id/horoscope_dates"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:drawSelectorOnTop="false"
         android:textColor="#7411F7"
         android:textStyle="italic"
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+        android:padding="10dp" />
 
     <TextView
         android:id="@+id/horoscope_description"
         android:layout_width="match_parent"
         android:layout_height="282dp"
         android:drawSelectorOnTop="false"
-        android:layout_weight="0.46"
+        android:layout_weight="0.19"
         android:textColor="#7411F7"
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+        android:padding="10dp"
+        android:paddingRight="5dp" />
 
 </LinearLayout>
