--- a/Text2Voice/app/src/main/res/layout/main_fragment.xml
+++ b/Text2Voice/app/src/main/res/layout/main_fragment.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <EditText
         android:layout_width="match_parent"
@@ -11,10 +13,18 @@
         android:layout_weight="0.21" />
 
     <Button
-        android:layout_width="165dp"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.08" />
+        android:id="@+id/angry_btn"
+
+        android:text="SAY IT!"
+        android:textColor="#FFFFFF"
+        android:textSize="50sp"
+
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
