Buttons working as well as List for Path and Paint to redraw

--- a/DrawingBoard/app/src/main/res/layout/controllers_layout.xml
+++ b/DrawingBoard/app/src/main/res/layout/controllers_layout.xml
@@ -3,6 +3,34 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffff6ed3">
+    android:background="#9bffc0cb">
 
+    <RadioGroup
+        android:id="@+id/radiogroup"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+    <RadioButton
+        android:id="@+id/redbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Red"
+         />
+
+    <RadioButton
+        android:id="@+id/bluebutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Blue"
+         />
+
+    <RadioButton
+        android:id="@+id/greenbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Green"
+         />
+
+    </RadioGroup>
 </LinearLayout>
