--- a/StateTheObvious/app/src/main/res/layout/activity_main_fragment.xml
+++ b/StateTheObvious/app/src/main/res/layout/activity_main_fragment.xml
@@ -21,7 +21,8 @@
         android:layout_height="wrap_content"
         android:height="50dp"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/button" />
 
     <Button
         android:id="@+id/button"
@@ -29,16 +30,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="66dp"
-        android:layout_below="@+id/edit_text"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignTop="@+id/edit_text"
+        android:layout_alignEnd="@+id/text_view" />
 
     <ImageView
+        android:id="@+id/image_view"
         android:src="@drawable/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_text" />
 
 </RelativeLayout>
