--- a/TextMe/app/src/main/res/layout/activity_text_me.xml
+++ b/TextMe/app/src/main/res/layout/activity_text_me.xml
@@ -1,32 +1,62 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TextMeActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TextMeActivity"
+    android:background="#ffff6699"
+    android:orientation="vertical">
 
+    <ImageView
+        android:src="@drawable/burntext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:id="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Enter victim's number:"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/phone"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffffff" />
     <EditText
         android:id="@+id/phone"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_above="@+id/textView"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="What annoys you about them?"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView"
+        android:layout_alignTop="@+id/msg"
+        android:textColor="#ffffffff" />
+
 
     <EditText
         android:id="@+id/msg"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_below="@+id/phone"
-        android:layout_alignParentStart="true" />
+        android:layout_height="74dp"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/sendButton"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/sendButton"
-        android:text="Spill the tea."
+        android:text="Call them out!"
         android:onClick="sendSMS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal" />
 
 
-</RelativeLayout>
+</LinearLayout>
